<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">DDOApp</string>
    <string name="hello_world" translatable="false">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="dodConnectedFalse">Not connected</string>
    <string name="dodConnectedScanning">Scanning...</string>
    <string name="dodConnectedTrue">Connected</string>
    <string name="unitValueDefault" translatable="false">KM</string>
    <string name="distanceValueDefault" translatable="false">---.---</string>
    <string name="connectedToLabel">Device</string>
    <string name="lastUpdateLabel">From</string>
    <string name="lastUpdateDefault">never</string>
    <string name="messageDefault">No messages</string>
    <string name="msgBleNotSupported">BLE is not supported</string>
    <string name="msgBluetoothNotSupported">Bluetooth not supported</string>
    <string name="menuScan">Scan</string>
    <string name="menuRefresh">Refresh</string>
    <string name="distanceMeterValueDefault" translatable="false">---</string>
    <string name="menuDemo">Demo on</string>
    <string name="menuDemoActive">Demo off</string>
    <string name="messageBluetoothNotOn">Bluetooth not active, can not scan.</string>
    <string name="nameDDO" translatable="false">DDO</string>
    <string name="nameDummy" translatable="false">Dummy Device</string>
</resources>
