<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto"
      xmlns:tools="http://schemas.android.com/tools"
      tools:context=".MainActivity">
    <item android:id="@+id/menu_scan"
          android:title="@string/menuScan"
          android:orderInCategory="100"
          app:showAsAction="ifRoom|withText"/>
    <item android:id="@+id/menu_demo"
          android:title="@string/menuDemo"
          android:orderInCategory="100"
          app:showAsAction="ifRoom|withText"/>
    <item android:id="@+id/menu_refresh"
          android:checkable="false"
          android:orderInCategory="1"
          app:showAsAction="never"
          android:title="@string/menuRefresh"/>
    <item android:id="@+id/action_settings"
          android:title="@string/action_settings"
          android:orderInCategory="100"
          app:showAsAction="never"/>
</menu>
