<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/activity_vertical_margin"
                android:paddingBottom="@dimen/activity_vertical_margin"
                tools:context=".MyActivity$PlaceholderFragment"
                android:id="@+id/MainLayout">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@color/connectionStatusDisconnected"
        android:padding="10dp"
        android:onClick="onClickConnectButton"
        android:id="@+id/connectButton">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Large Text"
            android:id="@+id/deviceNameValue"
            android:textColor="#FFF6FFF7"
            android:layout_gravity="center_horizontal"
            android:textSize="30sp"/>

        <TextView
            android:text="@string/dodConnectedFalse"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/connectedToValue"
            android:layout_alignParentStart="true"
            android:textColor="#FFF6FFF7"
            />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:id="@+id/distanceSection">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/distanceValueDefault"
            android:id="@+id/distanceValue"
            android:textSize="50dp"
            android:layout_centerInParent="true"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/distanceMeterValueDefault"
            android:id="@+id/distanceMeterValue"
            android:layout_alignBottom="@+id/unitValue"
            android:layout_toEndOf="@+id/unitValue"
            android:layout_marginLeft="10dp"
            android:textSize="20dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/unitValueDefault"
            android:id="@+id/unitValue"
            android:layout_marginLeft="20dp"
            android:textStyle="bold"
            android:textSize="20dp"
            android:layout_alignBottom="@+id/distanceSection"
            android:layout_toEndOf="@+id/distanceSection"/>
    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lastUpdateDefault"
        android:id="@+id/lastUpdateValue"
        android:layout_marginLeft="10dp"
        android:layout_below="@+id/distanceSection"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/messageDefault"
        android:id="@+id/messageValue"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:lines="3" />

</RelativeLayout>

